package dependency;

/**
 * @author TanYuan
 * @date 2022年05月05日 21:27
 */
public class PersonServiceBean {
    private PersonDao personDao;
    public void save(Person person){

    }

    public IDCard getIdCard(Integer personId){
        return null;
    }

    public void modify() {
        Department department = new Department();
    }

}
class PersonDao{}
class IDCard{}
class Person{}
class Department{}
